2001-06-28  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2001-06-27  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2001-06-20  Carlos Perells Marmn <carlos@gnome-db.org>

	* es.po: Changed some typos.

2001-06-01  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2001-05-29  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Added aisleriot/SCHEME_GAMES.h.
	* no.po: Updated Norwegian translation.
	
2001-05-27  Sami Pesonen <spesonen@dlc.fi>

	* fi.po: Updated Finnish translation.

2001-05-25  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2001-05-22  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2001-05-21  Pablo Saratxaga <pablo@mandrakesoft.com>

	* sl;po: fixed header
	* zh_TW.Big5.po: fixed invalid multibyte

2001-04-27  Christian Meyer  <chrisime@gnome.org>

	* de.po: Updated German translation.

2001-04-25  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2001-04-22  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2001-04-22  Kenneth Christiansen  <kenneth@gnu.org>

	* POTFILES.in: Changed so you will get 100 more strings to
	translate if you use intltool (xml-i18n-tool successor, soon
	to be released). This fixes a lot of i18n errors with 
	Aisleriot

2001-04-19  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: Updates from Fabrizio Stefani <f.stef@inwind.it>

Mon Apr 16 02:29:18 2001  George Lebl <jirka@5z.com>

	* cs.po: updated a bit

2001-03-25  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* ko.po: Updated with translations from a Korean magazine
	* {et,hu,pl,ro,zh_CN.GB2312}.po: fixed headers and/or syntax errors

2001-03-22  Christophe Merlet  <redfox@eikonex.org>

	* fr.po: Updated French translation.
