@@ -1,73 +1,3 @@
-aisleriot/agnes.scm
-aisleriot/labyrinth.scm
-aisleriot/auld_lang_syne.scm
-aisleriot/lady_jane.scm
-aisleriot/bakers_dozen.scm
-aisleriot/maze.scm
-aisleriot/bakers_game.scm
-aisleriot/monte_carlo.scm
-aisleriot/beleaguered_castle.scm
-aisleriot/neighbor.scm
-aisleriot/block_ten.scm
-aisleriot/odessa.scm
-aisleriot/bristol.scm
-aisleriot/osmosis.scm
-aisleriot/camelot.scm
-aisleriot/peek.scm
-aisleriot/canfield.scm
-aisleriot/pileon.scm
-aisleriot/clock.scm
-aisleriot/plait.scm
-aisleriot/cover.scm
-aisleriot/poker.scm
-aisleriot/diamond_mine.scm
-aisleriot/quatorze.scm
-aisleriot/doublets.scm
-aisleriot/royal_east.scm
-aisleriot/eagle_wing.scm
-aisleriot/scorpion.scm
-aisleriot/easthaven.scm
-aisleriot/scuffle.scm
-aisleriot/eight_off.scm
-aisleriot/seahaven.scm
-aisleriot/elevator.scm
-aisleriot/sir_tommy.scm
-aisleriot/escalator.scm
-aisleriot/sol.scm
-aisleriot/first_law.scm
-aisleriot/spider.scm
-aisleriot/fortress.scm
-aisleriot/spiderette.scm
-aisleriot/fortunes.scm
-aisleriot/straight_up.scm
-aisleriot/fourteen.scm
-aisleriot/streets_and_alleys.scm
-aisleriot/freecell.scm
-aisleriot/template.scm
-aisleriot/gay_gordons.scm
-aisleriot/thieves.scm
-aisleriot/glenwood.scm
-aisleriot/thirteen.scm
-aisleriot/golf.scm
-aisleriot/thumb_and_pouch.scm
-aisleriot/gypsy.scm
-aisleriot/treize.scm
-aisleriot/helsinki.scm
-aisleriot/union_square.scm
-aisleriot/hopscotch.scm
-aisleriot/valentine.scm
-aisleriot/isabel.scm
-aisleriot/westhaven.scm
-aisleriot/jamestown.scm
-aisleriot/whitehead.scm
-aisleriot/jumbo.scm
-aisleriot/will_o_the_wisp.scm
-aisleriot/kansas.scm
-aisleriot/yield.scm
-aisleriot/king_albert.scm
-aisleriot/yukon.scm
-aisleriot/klondike.scm
-aisleriot/zebra.scm
 aisleriot/translatable_game_names.h
 aisleriot/dialog.c
 aisleriot/menu.c
