@@ -1,5 +1,7 @@
 2001-06-28  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* POTFILES.in: Remove all the .scm files until later. We
+	aren't losing any strings anyway.
 	* no.po: Updated Norwegian translation.
 
 2001-06-27  Ole Laursen  <olau@hardworking.dk>
